spl2/hn_tests/failing/udp_echo_server-1.hn
hnMain = {
	s = 5
	reply msg = print s
	ping = reply 6
	ping
}